// Opt: delta-encode
// Opt: flatten?
message CRDTMetaMessage {
  required uint32 count = 1;
  map<string, uint64> causallyMaximalVectorClock = 2;
  map<string, uint64> extraVectorClock = 3;
  optional uint64 wallClockTime = 4;
  optional uint64 lamportTimestamp = 5;
}

message CRDTMetaBatchMessage {
  required uint64 firstSenderCounter = 1;
  repeated CRDTMetaMessage metas = 2;
}
